--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 			<div class="footer__wrapper">
 				<section class="footer__company">
 					<a class="footer__logo" href="#"><img src="img/main-logo.png" width="55" height="16"></a>
-					<p class="footer_quote">Мы ценим своих сотрудников и создаем
+					<p class="footer__quote">Мы ценим своих сотрудников и создаем
 						возможности для их профессионального развития и карьерного роста</p>
 				</section>
 				<section class="footer__hotline hotline">
@@ -188,7 +188,7 @@
 					<ul class="portal__list">
 						<li class="portal__item"><a href="#">Обратная связь</a></li>
 						<li class="portal__item"><a href="#">Карта разделов порталов</a></li>
-						<li class="portal__item"><a href="#">Заявка в Service desk</a></li>
+						<li class="portal__item"><a href="#">Заявка в Service Desk</a></li>
 						<li class="portal__item"><a href="#">Помощь</a></li>
 						<li class="portal__item"><a href="#">Команда</a></li>
 					</ul>
