--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="container">
 			<section class="menu">
 				<div class="menu__logo">
-					<a href="#"><img src="img/main-logo.png" width="69" height="20"></a>
+					<a href="#"><img src="img/main-logo.png" width="69" height="20" alt="EB logo"></a>
 				</div>
 				<a class="menu__number">73</a>
 				<ul class="menu__list">
@@ -30,7 +30,7 @@
 					</form>
 					<a class="menu__mail menu__mail--notempty" href="#">Письма<span class="menu__mail-number">12</span></a>
 					<a class="menu__user-profile" href="#">
-						<img class="menu__user-photo" src="img/user.png" width="30" height="30">
+						<img class="menu__user-photo" src="img/user.png" width="30" height="30" alt="user photo">
 						<p class="menu__user-name">Александр</p>
 					</a>
 				</div>
@@ -53,7 +53,7 @@
 			<div class="container">
 				<div class="promo">
 					<div class="promo__tv">
-						<a class="promo__video-link" href="#"><img href="#" src="img/video-preview.png" width="100" height="100" alt="video preview"></a>
+						<a class="promo__video-link" href="#"><img src="img/video-preview.png" width="100" height="100" alt="video preview"></a>
 						<div class="promo__description">
 							<a href="#" class="promo__description-small">Евраз ТВ</a>
 							<a href="#" class="promo__title">65-летие Рельсобалочного цеха ЕВРАЗ НТМК</a>
